[distributed-system] refactor