@@ -1,12 +1,18 @@
 package distributed;
 
 import lombok.extern.slf4j.Slf4j;
-import org.apache.zookeeper.*;
+import org.apache.zookeeper.KeeperException;
+import org.apache.zookeeper.WatchedEvent;
+import org.apache.zookeeper.Watcher;
+import org.apache.zookeeper.ZooKeeper;
 import org.apache.zookeeper.data.Stat;
 
 import java.io.IOException;
 import java.util.Collections;
 import java.util.List;
+
+import static org.apache.zookeeper.CreateMode.EPHEMERAL_SEQUENTIAL;
+import static org.apache.zookeeper.ZooDefs.Ids.OPEN_ACL_UNSAFE;
 
 @Slf4j
 @SuppressWarnings("SynchronizeOnNonFinalField")
@@ -18,13 +24,16 @@ public class LeaderElection implements Watcher {
     private static final String ELECTION_NAMESPACE = "/election";
 
     private ZooKeeper zooKeeper;
-    private String currentZkNodeName;
+    private String currentNodeName;
 
     public static void main(String[] args) throws IOException, InterruptedException, KeeperException {
         var app = new LeaderElection();
         try {
             app.connectToZookeeper();
             app.registerForLeadershipElection();
+            //
+            // ~ initial leader election
+            //
             app.reelectLeader();
             app.waitForDisconnect();
         } finally {
@@ -35,30 +44,39 @@ public class LeaderElection implements Watcher {
 
     public void registerForLeadershipElection() throws KeeperException, InterruptedException {
         String pathPrefix = ELECTION_NAMESPACE + "/c_";
-        String fullPath = zooKeeper.create(pathPrefix, NO_DATA, ZooDefs.Ids.OPEN_ACL_UNSAFE, CreateMode.EPHEMERAL_SEQUENTIAL);
+        String fullPath = zooKeeper.create(pathPrefix, NO_DATA, OPEN_ACL_UNSAFE, EPHEMERAL_SEQUENTIAL);
         log.info("I am: [{}]", fullPath);
-        this.currentZkNodeName = fullPath.replace(ELECTION_NAMESPACE + "/", "");
+        this.currentNodeName = fullPath.replace(ELECTION_NAMESPACE + "/", "");
     }
 
     public void reelectLeader() throws KeeperException, InterruptedException {
         Stat predecessorStat = null;
-        String predecessorZnodeName = "";
-        // ~ handle race condition
+        String predecessorNodeName;
+        //
+        // ~ handle race condition between zooKeeper.getChildren() & zooKeeper.exists()
+        // ~ case 1: become a new leader
+        // ~ case 2: find another predecessor node
+        //
         while (predecessorStat == null) {
             List<String> children = zooKeeper.getChildren(ELECTION_NAMESPACE, false);
             Collections.sort(children);
-            String smallestChild = children.get(0);
-            log.info("first [{}] vs me [{}]", smallestChild, currentZkNodeName);
-            if (smallestChild.equals(currentZkNodeName)) {
+            String smallestChild = children.getFirst();
+            log.info("first [{}] vs me [{}]", smallestChild, currentNodeName);
+            if (smallestChild.equals(currentNodeName)) {
                 log.info("I am the leader");
                 return;
             }
-            // ~ worker (at least one node joined before)
             log.info("I am not the leader");
-            int predecessorIndex = Collections.binarySearch(children, currentZkNodeName) - 1;
-            predecessorZnodeName = children.get(predecessorIndex);
-            predecessorStat = zooKeeper.exists(ELECTION_NAMESPACE + "/" + predecessorZnodeName, this);
-            log.info("Watching node: [{}]", predecessorZnodeName);
+            //
+            // ~ if not a leader = at least one node joined before
+            //
+            int predecessorIndex = Collections.binarySearch(children, currentNodeName) - 1;
+            predecessorNodeName = children.get(predecessorIndex);
+            //
+            // ~ subscribe for predecessor node notification
+            //
+            predecessorStat = zooKeeper.exists(ELECTION_NAMESPACE + "/" + predecessorNodeName, this);
+            log.info("Watching node: [{}]", predecessorNodeName);
         }
     }
 
@@ -93,6 +111,9 @@ public class LeaderElection implements Watcher {
             }
             case NodeDeleted -> {
                 try {
+                    //
+                    // ~ cluster has changed
+                    //
                     reelectLeader();
                 } catch (Exception e) {
                     log.error("Error happened during leader election", e);
